--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:id="@+id/relativeLayout">
 
     <!--welcome message in text view-->
-    <TextView
-        android:id="@+id/idheadTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="10dp"
-        android:text="Geeks for Geeks \n Welcome to Home Screen"
-        android:textAlignment="center"
-        android:textColor="@color/purple_500"
-        android:textSize="20sp"
-        android:gravity="center_horizontal" />
 
     <!--Button for logout from the app-->
     <Button
         android:id="@+id/idBtnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idheadTV"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
         android:text="Logout"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+    <HorizontalScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <com.SEG2505_Group8.mealer.PhotoCard
+                android:id="@+id/photoCard"
+
+                android:layout_height="match_parent"
+                android:layout_width="300dp" />
+
+            <com.SEG2505_Group8.mealer.PhotoCard
+                android:id="@+id/photoCard1"
+                android:layout_height="match_parent"
+                android:layout_width="300dp" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
