--- a/app/src/main/res/layout/activity_user_info_form.xml
+++ b/app/src/main/res/layout/activity_user_info_form.xml
@@ -7,7 +7,7 @@
     tools:context=".UI.Activities.UserInfoForm">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/user_input_form_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -21,7 +21,7 @@
 
 
     <EditText
-        android:id="@+id/first_name"
+        android:id="@+id/user_input_form_first_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/last_name"
+        android:id="@+id/user_input_form_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
@@ -102,13 +102,13 @@
     <!--    </RadioGroup>-->
 
     <EditText
-        android:id="@+id/current_weight"
+        android:id="@+id/user_info_form_email"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_marginTop="260dp"
         android:ems="10"
         android:hint="@string/user_info_form_email"
-        android:inputType="number"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,7 @@
 
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/user_info_form_description"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
         android:layout_marginTop="344dp"
@@ -130,7 +130,7 @@
 
 
     <EditText
-        android:id="@+id/credit_card"
+        android:id="@+id/user_info_form_credit_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="428dp"
@@ -143,7 +143,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/address"
+        android:id="@+id/user_info_form_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/conditions"
+        android:id="@+id/user_info_form_conditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="580dp"
@@ -170,15 +170,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/user_info_form_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="684dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="#D500F9"
-        android:onClick="submitbuttonHandler"
-        android:text="SUBMIT"
+        android:onClick="submitbuttonhandler"
+        android:text="@string/user_info_form_submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
