--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,16 +28,64 @@
         app:layout_constraintTop_toBottomOf="@id/sign_in_header"
         android:hint="@string/sign_in_email" />
 
-    <EditText
-        android:id="@+id/sign_in_password_field"
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="2dp"
+        android:background="#90909090"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@id/seperatorText"
+        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+        app:layout_constraintStart_toEndOf="@id/seperatorText"
+        app:layout_constraintTop_toTopOf="@id/seperatorText" />
+
+    <TextView
+        android:id="@+id/seperatorText"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:text="@string/or"
+        android:textAlignment="center"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@id/placeholderButton"
+        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="#90909090"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@id/seperatorText"
+        app:layout_constraintEnd_toStartOf="@id/seperatorText"
+        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+        app:layout_constraintTop_toTopOf="@id/seperatorText" />
+
+    <Button
+        android:id="@+id/placeholderButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="40dp"
+        android:text="SIGN IN WITH GOOGLE (NoImpl)"
+        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
+
+    <Button
+        android:id="@+id/placeholderButton1"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field"
-        android:hint="@string/sign_in_password" />
+        android:layout_marginEnd="40dp"
+        android:text="SIGN IN WITH GITHUB (NoImpl)"
+        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+        app:layout_constraintTop_toBottomOf="@id/placeholderButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
