--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,6 +28,16 @@
         app:layout_constraintTop_toBottomOf="@id/sign_in_header"
         android:hint="@string/sign_in_email" />
 
+    <Button
+        android:id="@+id/signInContinueButton"
+        android:text="@string/continue_text"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
+        app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
+        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
 
     <View
         android:layout_width="0dp"
@@ -44,13 +54,14 @@
         android:id="@+id/seperatorText"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_marginTop="20dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/or"
         android:textAlignment="center"
-        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@id/placeholderButton"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
+        app:layout_constraintTop_toBottomOf="@id/signInContinueButton" />
 
     <View
         android:layout_width="0dp"
@@ -68,12 +79,12 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:text="SIGN IN WITH GOOGLE (NoImpl)"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
+        app:layout_constraintTop_toBottomOf="@id/seperatorText" />
 
     <Button
         android:id="@+id/placeholderButton1"
