--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,7 +29,7 @@
         android:hint="@string/sign_in_email" />
 
     <Button
-        android:id="@+id/signInContinueButton"
+        android:id="@+id/sign_in_continue_button"
         android:text="@string/continue_text"
         android:layout_width="0dp"
         android:layout_height="60dp"
@@ -45,13 +45,13 @@
         android:layout_marginStart="2dp"
         android:background="#90909090"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@id/seperatorText"
+        app:layout_constraintBottom_toBottomOf="@id/seperator_text"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
-        app:layout_constraintStart_toEndOf="@id/seperatorText"
-        app:layout_constraintTop_toTopOf="@id/seperatorText" />
+        app:layout_constraintStart_toEndOf="@id/seperator_text"
+        app:layout_constraintTop_toTopOf="@id/seperator_text" />
 
     <TextView
-        android:id="@+id/seperatorText"
+        android:id="@+id/seperator_text"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
@@ -61,7 +61,7 @@
         app:layout_constraintBottom_toTopOf="@id/placeholderButton"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/signInContinueButton" />
+        app:layout_constraintTop_toBottomOf="@id/sign_in_continue_button" />
 
     <View
         android:layout_width="0dp"
@@ -69,10 +69,10 @@
         android:layout_marginEnd="2dp"
         android:background="#90909090"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@id/seperatorText"
-        app:layout_constraintEnd_toStartOf="@id/seperatorText"
+        app:layout_constraintBottom_toBottomOf="@id/seperator_text"
+        app:layout_constraintEnd_toStartOf="@id/seperator_text"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toTopOf="@id/seperatorText" />
+        app:layout_constraintTop_toTopOf="@id/seperator_text" />
 
     <Button
         android:id="@+id/placeholderButton"
@@ -84,7 +84,7 @@
         android:text="SIGN IN WITH GOOGLE (NoImpl)"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
-        app:layout_constraintTop_toBottomOf="@id/seperatorText" />
+        app:layout_constraintTop_toBottomOf="@id/seperator_text" />
 
     <Button
         android:id="@+id/placeholderButton1"
