Add enter to submit

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -26,6 +26,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_in_header"
+        android:inputType="textEmailAddress"
+        android:imeOptions="actionGo"
         android:hint="@string/sign_in_email" />
 
     <Button
