color problem fixed ish

--- a/app/src/main/res/layout/activity_user_info_form.xml
+++ b/app/src/main/res/layout/activity_user_info_form.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="@string/user_info_form_title"
-        android:textColor="#D500F9"
+        android:textColor="@color/DarkElement"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -183,8 +183,9 @@
         android:backgroundTint="#D500F9"
         android:onClick="submitbuttonhandler"
         android:text="@string/user_info_form_submit"
+        app:backgroundTint="@color/DarkElement"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
