--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,16 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:autoSizeTextType="uniform"
-        android:text="Mealer"
+        android:text="@string/welcome"
         android:textAlignment="center"
         android:textColor="#D96545"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.865" />
 
     <Button
         android:id="@+id/login"
@@ -48,7 +50,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
         android:text="@string/continue_text"
-        app:backgroundTint="@color/DarkElement"
+        app:backgroundTint="@color/Peachy"
         app:cornerRadius="@dimen/fui_wrapper_padding_horiz"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
