--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,14 +7,14 @@
     <TextView
         android:id="@+id/sign_in_header"
         android:layout_width="wrap_content"
-        android:layout_marginTop="28dp"
         android:layout_height="60dp"
-        android:textColor="#D500F9"
+        android:layout_marginTop="28dp"
+        android:text="@string/sign_in_header"
+        android:textColor="@color/Toasted_Orange"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/sign_in_header" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/sign_in_email_field"
@@ -32,11 +32,12 @@
 
     <Button
         android:id="@+id/sign_in_continue_button"
-        android:text="@string/continue_text"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:text="@string/continue_text"
+        app:backgroundTint="@color/NotSure"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
@@ -84,6 +85,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:text="SIGN IN WITH GOOGLE (NoImpl)"
+        app:backgroundTint="@color/NotSure"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/seperator_text" />
@@ -96,6 +98,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:text="SIGN IN WITH GITHUB (NoImpl)"
+        app:backgroundTint="@color/NotSure"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/placeholderButton" />
