--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
         android:text="@string/continue_text"
-        app:backgroundTint="@color/Peachy"
+        app:backgroundTint="@color/NotSure"
         app:cornerRadius="@dimen/fui_wrapper_padding_horiz"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
