--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,30 +2,14 @@
 <resources>
     <color name="white">#FFFFFF</color>
 
-    <!-- First color palette idea
+    <color name="primary">#D0895D</color> <!-- Brown Paper -->
+    <color name="primary_variant">#D96545</color> <!-- Peachy -->
+    <color name="primary_on">@color/white</color>
+    <color name="secondary">#BF4B2B</color> <!-- Toasted Orange -->
+    <color name="secondary_variant">#ab6c44</color> <!-- Brown -->
+    <color name="secondary_on">@color/white</color>
 
-    <color name="dark_purple">#4A3459</color>
-    <color name="pink_m">#FF7A7A</color>
-    <color name="light_lavender">#CDC1D9</color>
-    <color name="lavender">#AC9FBF</color>
-    <color name="brown">#A65C41</color>
-    <color name="pink">#F28888</color>
-    -->
-    <!-- Second color palette idea
-    <color name="blue">#172b72</color>
-    <color name="light_pink">#efa1e3</color>
-    <color name="dark_pink">#b862a7</color>
-    <color name="light_blue">#1f3c81</color>
-    <color name="dark_blue">#041d6e</color>
-    -->
-    <!-- Mo's palette -->
-
-    <color name="brown_paper">#D0895D</color>
-    <color name="Peachy">#D96545 </color>
-    <color name="DarkElement">#bc292c </color>
-    <color name="Toasted_Orange">#bf4b2b </color>
-    <color name="brown">#ab6c44 </color>
-    <color name="lightBrown">#d1885c </color>
-
-
+    <color name="callToAction">#BC292C</color> <!-- Call to Action / Dark Element -->
+    <!-- Old colors -->
+    <!--<color name="light_brown">#d1885c </color>-->
 </resources>
