--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,9 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="CallToAction">
+        <item name="android:backgroundTint">@color/callToAction</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
