--- a/app/src/main/res/layout/activity_user_info_form.xml
+++ b/app/src/main/res/layout/activity_user_info_form.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:text="@string/user_info_form_title"
-        android:textColor="#D500F9"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -169,9 +168,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="30dp"
-        android:backgroundTint="#D500F9"
-        android:buttonTint="#D500F9"
         android:text="@string/user_info_form_conditions"
+        style="@style/CallToActionDarkText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/user_info_form_submit_button" />
 
@@ -180,9 +178,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#D500F9"
         android:onClick="submitbuttonhandler"
         android:text="@string/user_info_form_submit"
+        style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
