--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -36,6 +36,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        style="@style/CallToAction"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/sign_in_email_field" />
@@ -83,6 +84,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:text="SIGN IN WITH GOOGLE (NoImpl)"
+        style="@style/Disabled"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/seperator_text" />
@@ -95,6 +97,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:text="SIGN IN WITH GITHUB (NoImpl)"
+        style="@style/Disabled"
         app:layout_constraintEnd_toEndOf="@id/sign_in_email_field"
         app:layout_constraintStart_toStartOf="@id/sign_in_email_field"
         app:layout_constraintTop_toBottomOf="@id/placeholderButton" />
