--- a/app/src/main/res/layout/activity_cook_login.xml
+++ b/app/src/main/res/layout/activity_cook_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,80 +7,114 @@
     tools:context=".cook_login">
 
     <TextView
+        android:id="@+id/chef_input_form_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="Cook info"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30dp"
-        android:id="@+id/header_title1"
-        />
-    
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_marginTop="28dp"
+        android:text="@string/chef_info_form_title"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/chef_input_form_first_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/header_title1"
-        android:layout_margin="30dp"
->
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="@string/user_info_form_first_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chef_input_form_title" />
+
+    <EditText
+        android:id="@+id/chef_input_form_last_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:hint="@string/user_info_form_last_name"
+        app:layout_constraintEnd_toEndOf="@id/chef_input_form_first_name"
+        app:layout_constraintStart_toStartOf="@id/chef_input_form_first_name"
+        app:layout_constraintTop_toBottomOf="@id/chef_input_form_first_name" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Prenom"
-            android:id="@+id/prenom"
-            android:layout_margin="10dp"
-            />
+            android:id="@+id/chef_info_form_email"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:hint="@string/user_info_form_email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="@id/chef_input_form_last_name"
+            app:layout_constraintStart_toStartOf="@id/chef_input_form_last_name"
+            app:layout_constraintTop_toBottomOf="@id/chef_input_form_last_name" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nom"
-            android:id="@+id/nom"
-            android:layout_margin="10dp"
-            />
+    <EditText
+        android:id="@+id/chef_info_form_password"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:hint="@string/user_info_form_password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@id/chef_info_form_email"
+        app:layout_constraintStart_toStartOf="@id/chef_info_form_email"
+        app:layout_constraintTop_toBottomOf="@id/chef_info_form_email" />
+
+    <EditText
+        android:id="@+id/chef_info_form_description"
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="@string/user_info_form_description"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@id/chef_info_form_password"
+        app:layout_constraintStart_toStartOf="@id/chef_info_form_password"
+        app:layout_constraintTop_toBottomOf="@id/chef_info_form_password" />
 
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="adress du restaurant"
-            android:id="@+id/adress"
-            android:layout_margin="10dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Description de soi-même"
-            android:id="@+id/description"
-            android:layout_margin="10dp"
-            />
+    <EditText
+        android:id="@+id/chef_info_form_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="@string/user_info_form_address"
+        android:inputType="text"
+        android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="@id/chef_info_form_description"
+        app:layout_constraintStart_toStartOf="@id/chef_info_form_description"
+        app:layout_constraintTop_toBottomOf="@id/chef_info_form_description" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Adress couriel"
-            android:id="@+id/couriel"
-            android:layout_margin="10dp"
-            />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mots de passe"
-            android:id="@+id/mots_de_passe"
-            android:layout_margin="10dp"
-            />
-        <Button
-            android:layout_marginTop="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Void check picture"
-            />
+    <Button
+        android:id="@+id/chef_info_form_void_check"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="30dp"
+        android:text="@string/void_check"
+        style="@style/CallToAction"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="@id/chef_info_form_address"
+        app:layout_constraintStart_toStartOf="@id/chef_info_form_address"
+        app:layout_constraintTop_toBottomOf="@id/chef_info_form_address"  />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/chef_info_form_submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/user_info_form_submit"
+        style="@style/CallToAction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
