--- a/app/src/main/res/layout/activity_chef_sign_up_form.xml
+++ b/app/src/main/res/layout/activity_chef_sign_up_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cook_login">
+    tools:context=".UI.Activities.ChefSignUpFormActivity">
 
     <TextView
         android:id="@+id/chef_input_form_title"
