--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="android:backgroundTint">@color/disabled</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="UserSelectImage">
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
 </resources>
