--- a/app/src/main/res/layout/fragment_complaint_list.xml
+++ b/app/src/main/res/layout/fragment_complaint_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".UI.Fragments.ComplaintFragment"
+    tools:context=".UI.Fragments.ComplaintListFragment"
     tools:listitem="@layout/fragment_complaint_item" />
