--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,10 @@
         <item name="android:scaleType">fitCenter</item>
     </style>
 
-    <style name="BottomMenuBar" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
+    <style name="BottomMenuBar" parent="Widget.MaterialComponents.BottomNavigationView.Colored"></style>
+
+    <style name="Widget.Theme.Mealer.MyView" parent="">
+        <item name="android:background">@color/gray_400</item>
+        <item name="exampleColor">@color/light_blue_400</item>
     </style>
 </resources>
