--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -36,9 +36,7 @@
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="The target"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_source" />
 
     <TextView
@@ -48,8 +46,15 @@
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="A Complaint description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/complaint_source"
         app:layout_constraintTop_toBottomOf="@id/complaint_destination" />
+
+    <Button
+        android:id="@+id/complaint_date"
+        android:text="Suspend user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/complaint_description"
+        app:layout_constraintStart_toStartOf="@id/complaint_source"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
