--- a/app/src/main/res/layout/fragment_complaint_item.xml
+++ b/app/src/main/res/layout/fragment_complaint_item.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/complaint"
+        android:id="@+id/complaint_item_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
