--- a/app/src/main/res/layout/fragment_complaint_item.xml
+++ b/app/src/main/res/layout/fragment_complaint_item.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Open"
+        android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toStartOf="@+id/reject"
         app:layout_constraintTop_toTopOf="parent" />
 
