Add recipe deletion

--- a/app/src/main/res/layout/fragment_menu_item.xml
+++ b/app/src/main/res/layout/fragment_menu_item.xml
@@ -15,6 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.chip.ChipGroup
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="@id/menu_item_title"
+        app:layout_constraintTop_toTopOf="@id/menu_item_title"
+        app:layout_constraintEnd_toStartOf="@id/open"
+        android:textAlignment="center">
+        <com.google.android.material.chip.Chip
+            android:id="@+id/menu_item_offered_chip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Offered"
+            />
+    </com.google.android.material.chip.ChipGroup>
+
     <Button
         android:id="@+id/open"
         android:layout_width="0dp"
