--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -8,147 +8,129 @@
     tools:context=".UI.Activities.RecipeActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/recipe_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name :"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="28dp"
+        android:text="@string/recipe_form_title"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/c"
+        android:id="@+id/recipe_course_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Course :"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/recipe_course_label"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199" />
+        app:layout_constraintTop_toBottomOf="@id/recipe_title" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/recipe_categories_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Categories :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.297" />
+        android:text="@string/recipe_categories_label"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/recipe_course_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_course_label" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/recipe_ingredients_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ingredients : "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.386" />
+        android:text="@string/recipe_ingredients_label"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/recipe_course_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_categories_label" />
+
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/recipe_allergens_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Allergens :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.101"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.485" />
+        android:text="@string/recipe_allergens_label"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/recipe_course_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_ingredients_label" />
+
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/recipe_price_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price :"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.588" />
+        android:text="@string/recipe_price_label"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/recipe_course_label"
+        app:layout_constraintTop_toBottomOf="@id/recipe_allergens_label" />
+
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/recipe_course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        android:layout_marginLeft="50dp"
+        app:layout_constraintStart_toEndOf="@id/recipe_course_label"
+        app:layout_constraintTop_toTopOf="@id/recipe_course_label" />
 
     <TextView
-        android:id="@+id/course"
+        android:id="@+id/recipe_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199" />
+        app:layout_constraintStart_toStartOf="@id/recipe_course"
+        app:layout_constraintTop_toTopOf="@id/recipe_categories_label" />
 
     <TextView
-        android:id="@+id/categories"
+        android:id="@+id/recipe_ingredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.296" />
+        app:layout_constraintStart_toStartOf="@id/recipe_course"
+        app:layout_constraintTop_toTopOf="@id/recipe_ingredients_label" />
 
     <TextView
-        android:id="@+id/ingredients"
+        android:id="@+id/recipe_allergens"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.43"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.386" />
+        app:layout_constraintStart_toStartOf="@id/recipe_course"
+        app:layout_constraintTop_toTopOf="@id/recipe_allergens_label" />
 
     <TextView
-        android:id="@+id/allergens"
+        android:id="@+id/recipe_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.484" />
+        app:layout_constraintStart_toStartOf="@id/recipe_course"
+        app:layout_constraintTop_toTopOf="@id/recipe_price_label" />
 
-    <TextView
-        android:id="@+id/price"
+
+    <CheckBox
+        android:id="@+id/recipe_offered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.393"
+        android:text="Is offered"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/recipe_price_label"
+        app:layout_constraintStart_toStartOf="@id/recipe_price_label"/>
+
+    <Button
+        android:id="@+id/recipe_delete"
+        android:text="@string/delete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintTop_toBottomOf="@id/recipe_offered"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.588" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
